# hive

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  PR.md  README.md  TUI_SELECTION_GUIDE.md  hive  hive.ps1  package.json  pyproject.toml  quickstart.ps1  quickstart.sh
.agent/: mcp_config.json
tools/: BUILDING_TOOLS.md  README.md  coder_tools_server.py  mcp_server.py  pyproject.toml
tools/src/aden_tools/: __init__.py
tools/src/aden_tools/credentials/: __init__.py  apollo.py  base.py  bigquery.py  browser.py  email.py  gcp_vision.py  github.py  google_maps.py  health_check.py  hubspot.py  integrations.py  llm.py  news.py  notion.py  search.py  serpapi.py  shopify.py  slack.py  store_adapter.py  telegram.py
tools/src/aden_tools/tools/: __init__.py
tools/src/aden_tools/tools/apollo_tool/: README.md  __init__.py  apollo_tool.py
tools/src/aden_tools/tools/bigquery_tool/: README.md  __init__.py  bigquery_tool.py
tools/src/aden_tools/tools/email_tool/: README.md  email_tool.py
tools/src/aden_tools/tools/excel_tool/: README.md  __init__.py  excel_tool.py
tools/src/aden_tools/tools/file_system_toolkits/: security.py
tools/src/aden_tools/tools/github_tool/: github_tool.py
tools/src/aden_tools/tools/gmail_tool/: README.md  __init__.py  gmail_tool.py
tools/src/aden_tools/tools/google_maps_tool/: README.md  __init__.py  google_maps_tool.py
tools/src/aden_tools/tools/linear_tool/: linear_tool.py
tools/src/aden_tools/tools/news_tool/: README.md  __init__.py  news_tool.py
tools/src/aden_tools/tools/runtime_logs_tool/: __init__.py  runtime_logs_tool.py
tools/src/aden_tools/tools/serpapi_tool/: README.md  __init__.py  serpapi_tool.py
tools/tests/: test_credentials.py  test_health_checks.py
tools/tests/integrations/: __init__.py  conftest.py  test_input_validation.py  test_registration.py  test_spec_conformance.py
tools/tests/tools/: test_apollo_tool.py  test_bigquery_tool.py  test_duckduckgo_tool.py  test_email_tool.py  test_excel_tool.py  test_gmail_tool.py  test_google_maps_tool.py  test_news_tool.py  test_runtime_logs_tool.py  test_sap_tool.py  test_serpapi_tool.py  test_telegram_tool.py  test_time_tool.py  test_vision_tool.py
(+233 files in other folders)
